force-app/main/default/objects/Onboarding__c/fields/Able_to_Add_Students_Today__c.field-meta.xml
<CustomField>
    <fullName>Able_to_Add_Students_Today__c</fullName>
    <description>Captured by sales on closed-won opp.</description>
    <inlineHelpText>Whether or not the center is able to add students at the time of closed-won sale.</inlineHelpText>
    <label>Able To Add Students Today</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Able_To_Add_Students_Today</valueSetName>
    </valueSet>
</CustomField>