force-app/main/default/objects/Onboarding__c/fields/Accepts_Online_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Online_Payment_Status__c</fullName>
    <description>From the school object associated to onboarding/account. Used to make sure customers have enabled online payments before their 1st bills go out.</description>
    <formula>Account__r.School_Object__r.Accepts_Online_Payment_Status__c</formula>
    <inlineHelpText>From the school object associated to onboarding/account. Used to make sure customers have enabled online payments before their 1st bills go out.</inlineHelpText>
    <label>Accepts Online Payment Status</label>
    <type>Text</type>
</CustomField>