force-app/main/default/objects/Onboarding__c/fields/Account_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_Type__c</fullName>
    <description>Customer Type from Account record - used to filter Non-Target or Enterprise in Onboarding reporting.</description>
    <formula>TEXT(Account__r.Customer_Type__c)</formula>
    <inlineHelpText>The Customer Type value set on the associated Account.</inlineHelpText>
    <label>Account Customer Type</label>
    <type>Text</type>
</CustomField>