force-app/main/default/objects/Onboarding__c/fields/Account_School_Object__c.field-meta.xml
<CustomField>
    <fullName>Account_School_Object__c</fullName>
    <description>Looks up the school object associated to the account in the Account lookup field and hyperlinks it to the school object record.</description>
    <formula>IF(
   NOT(ISBLANK(Account__r.School_Object__r.Name)),
   HYPERLINK(Account__r.School_Object__c, Account__r.School_Object__r.Name),
   &apos;&apos;
)</formula>
    <inlineHelpText>School Object associated to the Account.</inlineHelpText>
    <label>Account School Object</label>
    <type>Text</type>
</CustomField>