force-app/main/default/objects/Onboarding__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>The Account Type from the account associated to the onboarding.</description>
    <formula>TEXT(Account__r.Type)</formula>
    <inlineHelpText>The Account Type from the account associated to the onboarding.</inlineHelpText>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>