force-app/main/default/objects/Onboarding__c/fields/Activation_Override__c.field-meta.xml
<CustomField>
    <fullName>Activation_Override__c</fullName>
    <inlineHelpText>Used for outlier accounts that are healthy but don&apos;t meet the definition for activation</inlineHelpText>
    <label>Activation Override</label>
    <length>50</length>
    <type>Text</type>
</CustomField>