force-app/main/default/objects/Onboarding__c/fields/Active_Owner__c.field-meta.xml
<CustomField>
    <fullName>Active_Owner__c</fullName>
    <description>Shows if the current onboarding owner is an active user. For historical updates and reporting.</description>
    <formula>Owner:User.IsActive</formula>
    <inlineHelpText>Shows if the current onboarding owner is an active user. For historical updates and reporting.</inlineHelpText>
    <label>Active Owner</label>
    <type>Checkbox</type>
</CustomField>