force-app/main/default/objects/Onboarding__c/fields/Active_Student_Action_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Student_Action_Count__c</fullName>
    <description>Active Student Action Count from the school object associated to the account. Repurposed to show Activities, not Actions but API name was left as is to include &quot;action&quot; wording.</description>
    <formula>Account__r.School_Object__r.Active_Student_Action_Count__c</formula>
    <inlineHelpText>The total number of activities recorded against currently active students, only counting activities since 14 days prior to closed-won.</inlineHelpText>
    <label>Active Student Activity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>