force-app/main/default/objects/Onboarding__c/fields/Active_Student_Enrollment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Active_Student_Enrollment_Percent__c</fullName>
    <description>Active Student Enrollment Percent from the school object associated to the account.</description>
    <formula>Account__r.School_Object__r.Active_Student_Enrollment_Percent__c</formula>
    <inlineHelpText>The Active Student Enrollment Percent that informs the 90% enrollment threshold needed to move past the Completing Student Setup funnel stage.</inlineHelpText>
    <label>Active Student Enrollment Percent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>