force-app/main/default/objects/Onboarding__c/fields/Active_Student_Enrollment_Percent_Met__c.field-meta.xml
<CustomField>
    <fullName>Active_Student_Enrollment_Percent_Met__c</fullName>
    <description>Shows the Active Student Enrollment Percent Met date from the school object related to the onboarding.</description>
    <formula>Account__r.School_Object__r.Active_Student_Enrollment_Percent_Met__c</formula>
    <inlineHelpText>Shows the Active Student Enrollment Percent Met date from the school object related to the onboarding.</inlineHelpText>
    <label>Active Student Enrollment Percent Met</label>
    <type>Date</type>
</CustomField>