force-app/main/default/objects/Onboarding__c/fields/Active_Students_Parents_Added__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_Parents_Added__c</fullName>
    <description># Active Students Parents Added field from school object associated to the account.</description>
    <formula>Account__r.School_Object__r.Active_Students_Parents_Added__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of currently active students that have at least one parent added</inlineHelpText>
    <label>Active Students Parents Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>