force-app/main/default/objects/Onboarding__c/fields/Active_Students_with_Billing_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_with_Billing_Ratio__c</fullName>
    <description>Mapped from school object. Part of billing funnel automation</description>
    <formula>Account__r.School_Object__r.Active_Students_with_Billing_Ratio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Students with Billing Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>