force-app/main/default/objects/Onboarding__c/fields/Actively_Being_Sequenced__c.field-meta.xml
<CustomField>
    <fullName>Actively_Being_Sequenced__c</fullName>
    <description>Shows if the Primary Contact associated to the onboarding is Actively Being Sequenced in Outreach.</description>
    <formula>Primary_Contact__r.Actively_being_Sequenced__c</formula>
    <inlineHelpText>Shows if the Primary Contact associated to the onboarding is Actively Being Sequenced in Outreach.</inlineHelpText>
    <label>Actively Being Sequenced</label>
    <type>Checkbox</type>
</CustomField>