force-app/main/default/objects/Onboarding__c/fields/Activity_Count__c.field-meta.xml
<CustomField>
    <fullName>Activity_Count__c</fullName>
    <description>Activity Count field from the school object associated to the account.</description>
    <formula>Account__r.School_Object__r.Activity_Count__c</formula>
    <inlineHelpText>All activities all time (including product actions, msg, invoice, statements etc.)</inlineHelpText>
    <label>Activity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>