force-app/main/default/objects/Onboarding__c/fields/Activity_Threshold_Met_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Activity_Threshold_Met_Stamp__c</fullName>
    <label>Activity Threshold Met Stamp</label>
    <type>Date</type>
</CustomField>