force-app/main/default/objects/Onboarding__c/fields/Add_Parents_Threshold_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Add_Parents_Threshold_Stamp__c</fullName>
    <label>Add Parents Threshold Stamp</label>
    <type>Date</type>
</CustomField>