force-app/main/default/objects/Onboarding__c/fields/Add_Roster_By__c.field-meta.xml
<CustomField>
    <fullName>Add_Roster_By__c</fullName>
    <description>Date field to show when the center should have their roster added.</description>
    <inlineHelpText>When the center should have their roster added.</inlineHelpText>
    <label>Add Roster By</label>
    <type>Date</type>
</CustomField>