force-app/main/default/objects/Onboarding__c/fields/Add_to_Lessons_Started_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Lessons_Started_Sequence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox that will trigger flow that creates all tasks in the lessons started sequence for ec obs</description>
    <label>Add to Lessons Started Sequence</label>
    <type>Checkbox</type>
</CustomField>