force-app/main/default/objects/Onboarding__c/fields/Add_to_Pre_Curriculum_Start_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Pre_Curriculum_Start_Sequence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox that will trigger flow that creates all tasks in the pre-curriculum start sequence for ec obs</description>
    <label>Add to Pre-Curriculum Start Sequence</label>
    <type>Checkbox</type>
</CustomField>