force-app/main/default/objects/Onboarding__c/fields/ADMIN_Combined_Funnel_ID__c.field-meta.xml
<CustomField>
    <fullName>ADMIN_Combined_Funnel_ID__c</fullName>
    <description>For use in reporting and historical data uploads. Not visible to users on page layout.</description>
    <formula>Combined_Funnel__r.Id</formula>
    <label>ADMIN_Combined Funnel ID</label>
    <type>Text</type>
</CustomField>