force-app/main/default/objects/Onboarding__c/fields/ADMIN_Opp_ID__c.field-meta.xml
<CustomField>
    <fullName>ADMIN_Opp_ID__c</fullName>
    <description>For admin purposes only, not on page layout.</description>
    <formula>Opportunity__r.Id</formula>
    <label>ADMIN_Opp ID</label>
    <type>Text</type>
</CustomField>