force-app/main/default/objects/Onboarding__c/fields/ADMIN_Opp_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>ADMIN_Opp_Record_Type__c</fullName>
    <description>For admin purposes only, not on page layout.</description>
    <formula>Opportunity__r.RecordType.Name</formula>
    <label>ADMIN_Opp Record Type</label>
    <type>Text</type>
</CustomField>