force-app/main/default/objects/Onboarding__c/fields/ADMIN_Primary_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>ADMIN_Primary_Contact_ID__c</fullName>
    <description>Used for Admin purposes only, not on page layout.</description>
    <formula>Primary_Contact__r.Id</formula>
    <label>ADMIN_Primary Contact ID</label>
    <type>Text</type>
</CustomField>