force-app/main/default/objects/Onboarding__c/fields/ADMIN_Tag__c.field-meta.xml
<CustomField>
    <fullName>ADMIN_Tag__c</fullName>
    <description>Used to track manually updated onboardings in mass-update jobs. For funnel automation checking.</description>
    <label>ADMIN Tag</label>
    <length>40</length>
    <type>Text</type>
</CustomField>