force-app/main/default/objects/Onboarding__c/fields/Assigned_BW_Lessons_to_Classrooms__c.field-meta.xml
<CustomField>
    <fullName>Assigned_BW_Lessons_to_Classrooms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned BW Lessons to Classrooms</label>
    <type>Checkbox</type>
</CustomField>