force-app/main/default/objects/Onboarding__c/fields/At_Risk_To_Onboard_Indicators__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_To_Onboard_Indicators__c</fullName>
    <description>Updated list of risk indicators for OBS team - decided March 2020</description>
    <inlineHelpText>What are the indicators that the center is at risk to onboard successfully?</inlineHelpText>
    <label>At Risk To Onboard Indicators</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Devices</fullName>
            </value>
            <value>
                <fullName>Not Open/Operating</fullName>
            </value>
            <value>
                <fullName>Needs DM Approval</fullName>
            </value>
            <value>
                <fullName>Slow to Onboard</fullName>
            </value>
            <value>
                <fullName>Roster Issues</fullName>
            </value>
            <value>
                <fullName>Piloting/Testing</fullName>
            </value>
            <value>
                <fullName>Unresponsive to Communication</fullName>
            </value>
            <value>
                <fullName>Internal Business Reasons</fullName>
            </value>
            <value>
                <fullName>Missed Onboarding or Product Expectations</fullName>
            </value>
            <value>
                <fullName>COVID</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>