force-app/main/default/objects/Onboarding__c/fields/Attendance_or_Variable_Rate_Billing__c.field-meta.xml
<CustomField>
    <fullName>Attendance_or_Variable_Rate_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendance or Variable Rate Billing</label>
    <type>Checkbox</type>
</CustomField>