force-app/main/default/objects/Onboarding__c/fields/Billing_Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activated_Date__c</fullName>
    <description>Mapped from school object. Part of billing funnel automation</description>
    <formula>Account__r.School_Object__r.Billing_Activation_Date__c</formula>
    <label>Billing Activated Date</label>
    <type>Date</type>
</CustomField>