force-app/main/default/objects/Onboarding__c/fields/Billing_Activation_Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_Funnel_Stage__c</fullName>
    <formula>TEXT( Account__r.School_Object__r.Billing_Activation_Funnel_Stage_2024__c )</formula>
    <label>Billing Activation Funnel Stage</label>
    <type>Text</type>
</CustomField>