force-app/main/default/objects/Onboarding__c/fields/Billing_Adding_Payers_Stage_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Adding_Payers_Stage_Met_Date__c</fullName>
    <label>Billing Adding Payers Stage Met Date</label>
    <type>DateTime</type>
</CustomField>