force-app/main/default/objects/Onboarding__c/fields/Billing_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cadence__c</fullName>
    <description>How often the school bills parents.</description>
    <inlineHelpText>How often the school bills parents.</inlineHelpText>
    <label>Billing Cadence</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>