force-app/main/default/objects/Onboarding__c/fields/Billing_Call_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Call_2_Date__c</fullName>
    <label>Billing Call 2 Date</label>
    <type>Date</type>
</CustomField>