force-app/main/default/objects/Onboarding__c/fields/Billing_Call_2_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Call_2_Status__c</fullName>
    <label>Billing Call 2 Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Call_Status</valueSetName>
    </valueSet>
</CustomField>