force-app/main/default/objects/Onboarding__c/fields/Billing_Call_or_Webinar_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Call_or_Webinar_Date__c</fullName>
    <description>The date which a prospect has been signed up for the FTS initial call or webinar</description>
    <inlineHelpText>The date which a prospect has been signed up for the FTS initial call or webinar</inlineHelpText>
    <label>Billing Call or Webinar Date</label>
    <type>Date</type>
</CustomField>