force-app/main/default/objects/Onboarding__c/fields/Billing_Call_or_Webinar_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Call_or_Webinar_Status__c</fullName>
    <description>Used by Billing team on Billing Onboarding Record Type only.</description>
    <inlineHelpText>The status of the Billing Call or Webinar the school was signed up for.</inlineHelpText>
    <label>Billing Call or Webinar Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Call_Status</valueSetName>
    </valueSet>
</CustomField>