force-app/main/default/objects/Onboarding__c/fields/Billing_Closed_Won_by_Sales__c.field-meta.xml
<CustomField>
    <fullName>Billing_Closed_Won_by_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by flow - Create Onboarding Record, Contact Roles, and Child Accounts for Multi-Site</description>
    <label>Billing Closed Won by Sales</label>
    <type>Checkbox</type>
</CustomField>