force-app/main/default/objects/Onboarding__c/fields/Billing_Complete_Set_Up_Stage_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Complete_Set_Up_Stage_Met_Date__c</fullName>
    <label>Billing Complete Set-Up Stage Met Date</label>
    <type>DateTime</type>
</CustomField>