force-app/main/default/objects/Onboarding__c/fields/Billing_Conversation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Conversation_Notes__c</fullName>
    <description>Notes about the billing conversation that occurred with the SaaS rep. Mapped to new billing onboarding record in creation flow.</description>
    <inlineHelpText>Notes about the billing conversation that occurred with the SaaS rep.</inlineHelpText>
    <label>Billing Conversation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>