force-app/main/default/objects/Onboarding__c/fields/Billing_Dropout_Reason__c.field-meta.xml
<CustomField>
    <fullName>Billing_Dropout_Reason__c</fullName>
    <description>Manually populated by reps when a billing onboarding drops out of the activation funnel. Re-labeled 9/11/23</description>
    <inlineHelpText>Reason the customer has decided not to activate on billing.</inlineHelpText>
    <label>Billing Opt Out Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Closed_Lost_Reason</valueSetName>
    </valueSet>
</CustomField>