force-app/main/default/objects/Onboarding__c/fields/Billing_FinalVerification_Stage_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_FinalVerification_Stage_Met_Date__c</fullName>
    <label>Billing Verify Complete Stage Met Date</label>
    <type>DateTime</type>
</CustomField>