force-app/main/default/objects/Onboarding__c/fields/Billing_Initial_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Initial_Call_Date__c</fullName>
    <description>1st billing call, different than Initial Setup Call tracked by SaaS onboarding team.</description>
    <inlineHelpText>Date of 1st call between customer and billing team.</inlineHelpText>
    <label>Billing Initial Call Date</label>
    <type>Date</type>
</CustomField>