force-app/main/default/objects/Onboarding__c/fields/Billing_Invoices_Sent_Count__c.field-meta.xml
<CustomField>
    <fullName>Billing_Invoices_Sent_Count__c</fullName>
    <description>Number of billing invoices sent by the center - from the school object associated to the account.</description>
    <formula>Account__r.School_Object__r.Billing_Invoices_Sent_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of billing invoices sent by the center.</inlineHelpText>
    <label>Billing Invoices Sent Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>