force-app/main/default/objects/Onboarding__c/fields/Billing_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Launch_Date__c</fullName>
    <description>Billing Launch Date from the School Object associated to the Account.</description>
    <formula>Account__r.School_Object__r.Billing_Start_Date__c</formula>
    <inlineHelpText>Billing Launch Date from the School Object associated to the Account.</inlineHelpText>
    <label>Billing Launch Date</label>
    <type>Date</type>
</CustomField>