force-app/main/default/objects/Onboarding__c/fields/Billing_Launch_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Launch_Date_Stamp__c</fullName>
    <description>Stamped on billing onboardings in CF flow when school object billing launch date is changed.</description>
    <inlineHelpText>Stamped with Billing Launch Date from School Object.</inlineHelpText>
    <label>Billing Launch Date Stamp</label>
    <type>Date</type>
</CustomField>