force-app/main/default/objects/Onboarding__c/fields/Billing_Onboarding_Delayed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Billing_Onboarding_Delayed_Reason__c</fullName>
    <description>Manually populated by reps when a billing onboarding is delayed.</description>
    <inlineHelpText>Why is the billing onboarding delayed?</inlineHelpText>
    <label>Billing Onboarding Delayed Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reasons_For_Delayed_Billing_Onboardings</valueSetName>
    </valueSet>
</CustomField>