force-app/main/default/objects/Onboarding__c/fields/Billing_Onboarding_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Onboarding_Start_Date__c</fullName>
    <description>Populated from the Account</description>
    <inlineHelpText>Populated from the Account</inlineHelpText>
    <label>Billing Onboarding Start Date</label>
    <type>Date</type>
</CustomField>