force-app/main/default/objects/Onboarding__c/fields/Billing_Online_Payments_Stage_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Online_Payments_Stage_Met_Date__c</fullName>
    <label>Billing Online Payments Stage Met Date</label>
    <type>DateTime</type>
</CustomField>