force-app/main/default/objects/Onboarding__c/fields/Billing_Opted_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Opted_Out_Date__c</fullName>
    <description>Date the Onboarding Status was set to Opted Out. Updated from CF.</description>
    <inlineHelpText>Date the Onboarding Status was set to Opted Out. Updated from CF.</inlineHelpText>
    <label>Billing Opted Out Date</label>
    <type>Date</type>
</CustomField>