force-app/main/default/objects/Onboarding__c/fields/Billing_Reengaged_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Reengaged_Date__c</fullName>
    <label>Billing Reengaged Date</label>
    <type>Date</type>
</CustomField>