force-app/main/default/objects/Onboarding__c/fields/Billing_Secondary_Initial_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Secondary_Initial_Call_Status__c</fullName>
    <description>Used to track additional initial billing calls if Customer Path is Webinar, but additional personal help is needed for the customer.</description>
    <inlineHelpText>Used to track additional initial billing calls if Customer Path is Webinar, but additional personal help is needed for the customer.</inlineHelpText>
    <label>Billing Secondary Initial Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Call_Status</valueSetName>
    </valueSet>
</CustomField>