force-app/main/default/objects/Onboarding__c/fields/Billing_Sending_Bills_Stage_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Sending_Bills_Stage_Met_Date__c</fullName>
    <label>Billing Sending Bills Stage Met Date</label>
    <type>DateTime</type>
</CustomField>