force-app/main/default/objects/Onboarding__c/fields/Billing_Settings_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Billing_Settings_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If billing settings have been confirmed with customer, checkbox should be checked.</inlineHelpText>
    <label>Billing Settings Confirmed</label>
    <type>Checkbox</type>
</CustomField>